# fl-bft

./: .gitignore  README.md  main.py  pyproject.toml
fedorch/: client.py  config.py  dataset.py  datasets.py  model.py  models.py  plotting.py  run_experiments.py  runner.py  server.py  strategies.py  strategy.py  utils.py
logs/: cifar10_bulyan_c100_m0_20251207_212657.csv  cifar10_bulyan_c100_m0_20251207_212657.json  cifar10_bulyan_c10_m0_20251121_032542.csv  cifar10_bulyan_c10_m0_20251121_032542.json  cifar10_bulyan_c10_m0_20251207_061314.csv  cifar10_bulyan_c10_m0_20251207_061314.json  cifar10_bulyan_c10_m0_20251207_185843.csv  cifar10_bulyan_c10_m0_20251207_185843.json  cifar10_bulyan_c10_m1_20251119_225127.csv  cifar10_bulyan_c10_m1_20251119_225127.json  cifar10_bulyan_c10_m1_20251121_054657.csv  cifar10_bulyan_c10_m1_20251121_054657.json  cifar10_bulyan_c20_m0_20251207_072233.csv  cifar10_bulyan_c20_m0_20251207_072233.json  cifar10_bulyan_c20_m0_20251207_194541.csv  cifar10_bulyan_c20_m0_20251207_194541.json  cifar10_bulyan_c50_m0_20251120_032224.csv  cifar10_bulyan_c50_m0_20251120_032224.json  cifar10_bulyan_c50_m0_20251207_083632.csv  cifar10_bulyan_c50_m0_20251207_083632.json  cifar10_bulyan_c50_m0_20251207_203207.csv  cifar10_bulyan_c50_m0_20251207_203207.json  cifar10_bulyan_c50_m15_20251120_173930.csv  cifar10_bulyan_c50_m15_20251120_173930.json  cifar10_bulyan_c50_m25_20251120_234105.csv  cifar10_bulyan_c50_m25_20251120_234105.json  cifar10_bulyan_c50_m5_20251120_102953.csv  cifar10_bulyan_c50_m5_20251120_102953.json  cifar10_bulyan_c7_m0_20251204_062119.csv  (+221 more)
(+62 files in other folders)
