[project]
name = "fl-bft"
version = "0.1.0"
description = "A federated learning experiment with fault tolerance against byzantine client attacks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flwr-datasets[vision]>=0.5.0",
    "flwr[simulation]>=1.22.0",
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
